# Server-C-Version-

./: CMakeLists.txt  Entity.c  Entity.h  README.md  SECURITY.md  Server.c  Server.h  main.c
.github/workflows/: codeql-analysis.yml
